ttyd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttyd
  namespace: ttyd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ttyd
  template:
    metadata:
      labels:
        app: ttyd
    spec:
      containers:
        - name: ttyd
          image: tsl0922/ttyd:latest
          imagePullPolicy: IfNotPresent

          command:
            - ttyd

          args:
            - "-p"
            - "7681"
            - "sh"

          ports:
            - name: http
              containerPort: 7681
              protocol: TCP

          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
              ephemeral-storage: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "256Mi"
