ttyd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttyd
  namespace: ttyd
spec:
  selector:
    app: ttyd
  ports:
    - port: 7681
      targetPort: 7681
  type: ClusterIP
